<resources>
    <string name="app_name">Store</string>
    <string name="facebook_app_id">192092481416782</string>
    <string name="fb_login_protocol_scheme">fb192092481416782</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Shopping">Mua sắm</string>
    <string name="Following">Theo dõi</string>
    <string name="Cart">Giỏ hàng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Điện thoại</string>
    <string name="book">Sách</string>
    <string name="clothes">Quần áo</string>
    <string name="server_error">Có lỗi xảy ra !</string>
    <string name="account_not_verify">Tài khoản chưa được kích hoạt</string>
    <string name="api_not_found">Tài khoản không tồn tại</string>
    <string name="wrong_password_or_email">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="main_function">Chức năng chính</string>
    <string name="support_online">Hỗ trợ trực tuyến</string>
    <string name="other">Khác</string>
    <string name="share">Chia sẻ</string>
    <string name="rate_app">Đánh giá</string>
    <string name="logout">Đăng xuất</string>
    <string name="password_must_be_more_than_six_letter">Mật khẩu phải từ 6 ký tự trở lên</string>
    <string name="account_existed">Tài khoản đã tồn tại</string>
    <string name="register_successfully">Đăng ký thành công</string>
    <string name="email_send">Email xác nhận tài khoản đã được gửi đến hòm thư của bạn</string>
    <string name="completed">Hoàn tất</string>
    <string name="verify_email">Xác nhận email</string>
    <string name="still_not_recived_email">Chưa nhận được email ?</string>
    <string name="resend_email">Gửi lại</string>
    <string name="account">Tài khoản</string>
    <string name="about_store">Thông tin của hàng</string>
    <string name="rate">Đánh giá</string>
    <string name="connect_fb">Kết nối với Facebook</string>
    <string name="feedback">Phản hồi</string>
    <string name="content_feedback">Hãy cho chúng tôi biết ý kiến, góp ý của bạn về ứng dụng để chúng tôi có thể cập nhật và phát triển các sản phẩm phù hợp với người dùng hơn.</string>
    <string name="feedback_hint">Nhập lời nhắn</string>
    <string name="send">Gửi</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="id_card">Số CMND</string>
    <string name="title_activity_about">Map</string>
    <string name="description">Mô tả bản thân</string>
    <string name="no_internet_connection">Không có kết nối internet</string>
    <string name="enter_message">Nhập lời nhắn</string>
    <string name="note">* Chúng tôi mong muốn nhận được những nhận xét từ các bạn để tiếp tục xây dựng và phát triển cửa hàng</string>
    <string name="must_not_empty">Rỗng</string>

    <string name="error_message">Có lỗi xảy ra. Vui lòng thử lại</string>
    <string name="clothes_detail">Chi tiết sản phẩm</string>

    <string name="sale">Ưu đãi</string>
    <string name="service">Dịch vụ</string>
    <string name="enter_option">Góp ý thêm</string>
    <string name="title_activity_maps">Map</string>
    <string name="full_name">Họ tên</string>
    <string name="update_description">Cập nhật mô tả</string>
    <string name="enter_des">Nhập mô tả</string>
    <string name="update">Cập nhật</string>

    <string name="error_happened">Có lỗi xảy ra</string>
    <string name="retry">Thử lại</string>


    <string name="selected">Đã chọn</string>
    <string name="pick_avatar">Chọn ảnh</string>
    <string name="must_pick_one_image">Chỉ được chọn duy nhất 1 ảnh</string>
    <string name="reset_password">Đổi mật khẩu</string>
    <string name="not_match">Không khớp</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="forge_pass">Mật khẩu mới sẽ được gửi tới email. Vui lòng nhập đúng đia chỉ email</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="invalid_email">Email không đúng định dạng</string>
    <string name="no_save">Bạn chưa theo dõi sản phẩm nào</string>
    <string name="function_request_login">Tính năng yêu cầu đăng nhập</string>
    <string name="rate_product">Đánh giá sản phẩm</string>
    <string name="message">Chúng tôi sẽ giao hàng sớm nhất có thể !Xin cảm ơn !</string>
    <string name="no_order">Bạn chưa mua sản phẩm nào</string>
    <string name="history_order">Lịch sử mua hàng</string>
    <string name="cart_clothes">Giỏ hàng sản phẩm</string>
    <string name="submit">Xác nhận</string>
    <string name="no_item">Giỏ hàng rỗng !</string>
    <string name="seen_by">seen by</string>
    <string name="image_description">Mô tả</string>
    <string name="type_your_message">Nhập tin nhắn ...</string>
    <string name="seen">seen</string>
    <string name="toolbal_state_online">trạng thái Online</string>
    <string name="toolbal_state_offline">trạng thái Offline</string>
    <string name="search">Tìm kiếm</string>
    <string name="server_maintain">Máy chủ bảo trì</string>
    <string name="server_maintain_message">Máy chủ đang trong thời gian bảo trì.Vui lòng quay lại sau...</string>
    <string name="exit">Thoát</string>
    <string name="please_make_sure_the_intenet_connection_is_enable">Vui lòng kiểm tra lại internet</string>
</resources>
