<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.feedback.FeedbackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/feedback"
        app:titleTextColor="#fff" />

    <TextView
        android:padding="8dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:text="@string/content_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_feedback"
        android:padding="8dp"
        android:background="@drawable/background_edit_text"
        android:gravity="top"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/feedback_hint"/>

    <Button
        android:id="@+id/btn_Send"
        android:layout_marginVertical="16dp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@drawable/background_button"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>

</LinearLayout>