<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/main_function">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login_gray"
                    android:title="Đăng nhập" />

                <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_key_gray"
                    android:title="Đăng ký" />


            </menu>
        </item>


        <!--<item android:title="@string/supply_knowledge">-->
            <!--<menu>-->
                <!--<item-->
                    <!--android:id="@+id/nav_soft_skill"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="@string/soft_skill" />-->
                <!--<item-->
                    <!--android:id="@+id/nav_review_work"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="@string/review_work" />-->
            <!--</menu>-->
        <!--</item>-->
        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_app"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/rate_app" />

            </menu>
        </item>
    </group>

</menu>
