<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kidd.store.view.profile.update_description.UpdateDescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tool_bar"
        android:background="@color/colorPrimary"
        app:titleTextColor="#fff"
        app:title="@string/update_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:id="@+id/edt_des"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background_edit_text"
            android:gravity="top"
            android:textColor="#000"
            android:textSize="@dimen/font_size_16sp"
            android:hint="@string/enter_des"
            android:padding="16dp"/>
        <Button
            android:id="@+id/btn_update"
            android:textColor="#fff"
            android:layout_marginVertical="16dp"
            android:background="@drawable/background_button"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
