<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/verify_email"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="#fff" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sending_history_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/email_send"
                android:textColor="#ccc"
                android:textSize="16dp" />

            <Button
                android:background="@drawable/background_button"
                android:id="@+id/btn_accomplish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/completed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still_not_recived_email"
                    android:textSize="16dp" />

                <TextView

                    android:id="@+id/txt_resend_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/resend_email"
                    android:textColor="@color/md_red_700"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
