<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_product"
        android:textColor="#000"
        android:layout_margin="16dp"
        android:textSize="30dp"/>
    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"/>
    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/rating_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_cost_product"
        android:layout_margin="4dp"
        android:isIndicator="true"
        android:rating="3"
        android:focusable="true"
        android:clickable="true"
        android:max="5"
        app:mrb_progressTint="@android:color/holo_orange_light" />
    <EditText
        android:id="@+id/edt_cmt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_edit_text"
        android:gravity="top"
        android:hint="@string/enter_option"
        android:padding="16dp" />
    <Button
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_button"
        android:text="@string/rate"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_20sp" />
</LinearLayout>