<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.rate.RateActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/rate"
            app:titleTextColor="#fff" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:isIndicator="false"
                android:rating="1"
                android:stepSize="1"
                android:max="5"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:id="@+id/rate"
                app:mrb_fillBackgroundStars="true"
                app:mrb_progressTint="#fcfc06" />

            <EditText
                android:id="@+id/edt_cmt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/background_edit_text"
                android:gravity="top"
                android:hint="@string/enter_message"
                android:padding="16dp" />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:text="@string/rate"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/font_size_16sp"
                android:text="@string/note"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>